--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ ul {
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
     url("../imgs/bg.jpg");
-  height: 75%;
+  height: 85%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -69,7 +69,46 @@ hr {
 }
 
 /* navigation */
-nav .container-link {
+/* body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+} */
+
+.topnav {
+  overflow: hidden;
+/*  background-color: #333; */
+}
+
+.topnav a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 25px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: "Roboto", sans-serif;
+}
+
+.topnav a:hover {
+  /* background-color: #ddd; */
+  color: white;
+}
+
+/* .topnav a.active {
+  background-color: #4CAF50;
+  color: black;
+} */
+
+.topnav .icon {
+  display: none;
+}
+
+.center {
+text-align: center;
+}
+
+
+/* nav .container-link {
   list-style: none;
   color: white;
   display: flex;
@@ -79,14 +118,14 @@ nav .container-link {
   text-align: center;
 }
 
- nav ul .link {
+nav ul .link {
   /*font-family: "Roboto", sans-serif;
   width: 300px;
   padding: 20px;
-  */
+  
   width: 80%;
-  margin: 15px auto ;
-} 
+  margin: 15px auto;
+}
 
 .link a:link,
 a:visited,
@@ -101,7 +140,7 @@ a:active {
 
 .link a:hover {
   color: darkgray;
-}
+} */
 
 /* Sections */
 .title h1 {
@@ -283,7 +322,7 @@ section {
 .portfolio-info,
 .portfolio-info a {
   padding-bottom: 30px;
-  text-decoration: none;
+  /* text-decoration: none; */
 }
 
 /* Hobbies */
@@ -587,7 +626,10 @@ a:-webkit-any-link {
     align-self: center;
   }
 
-  .portfolio-description, .about-description, .meet-description, .knowledge-description {
+  .portfolio-description,
+  .about-description,
+  .meet-description,
+  .knowledge-description {
     width: 630px;
     margin: auto;
   }
@@ -671,19 +713,82 @@ a:-webkit-any-link {
   }
 }
 
-@media only screen and (max-width: 670px) {
-.portfolio-description, .about-description, .meet-description, .knowledge-description {
-    width: auto;
-}
+@media only screen and (min-width: 1500px) {
+  .portfolio-container {
+    width: 1500px;
+    margin-left: auto;
+    margin-right: auto
+  }
+
+  .topnav a {
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+
+  #me-image-header {
+    width: 14em;
+  }
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 670px) {
+
+  .portfolio-description,
+  .about-description,
+  .meet-description,
+  .knowledge-description {
+    width: auto;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive-nav {
+    position: relative;
+  }
+
+  .topnav.responsive-nav a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive-nav a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive-nav {position: relative;}
+  .topnav.responsive-nav .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive-nav a {
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 360px) {
   .portfolio-image {
     width: 285px;
   }
 
   #me-image-header {
     width: 8em;
+  }
+
+  .topnav a {
+    font-size: 12px;
   }
 
   /* nav ul .link {
