--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,6 @@ html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* ul {
-  margin: 0;
-  padding: 0;
-} */
-
 .center {
   text-align: center;
 }
@@ -91,17 +86,19 @@ hr {
 }
 
 .topnav a:hover {
-  /* background-color: #ddd;
-  */
   color: lightsalmon;
 }
 
-*/ .topnav .icon {
+.topnav .icon {
   display: none;
 }
 
 .center {
   text-align: center;
+}
+
+.fa-bars {
+  font-size: 27px;
 }
 
 /* nav .container-link {
@@ -578,8 +575,7 @@ a:-webkit-any-link {
   .portfolio-item-3,
   .portfolio-item-4,
   .portfolio-item-5,
-  .portfolio-item-6,
-  .hobbies-items {
+  .portfolio-item-6 {
     align-self: center;
   }
 
@@ -615,6 +611,10 @@ a:-webkit-any-link {
   .image-hobbies {
     width: 250px;
     margin-bottom: 15px;
+  }
+
+  .hobbies-items {
+    align-self: center;
   }
 
   /* Laptop */
