--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -475,9 +475,9 @@ fieldset {
 }
 
 .footer-link {
-  word-spacing: 14px;
+  /* word-spacing: 14px; */
   font-weight: bold;
-  padding: 30px 0 30px 0;
+  /* padding: 30px 0 30px 0; */
 }
 
 .footer-link a:hover {
@@ -504,6 +504,25 @@ a:-webkit-any-link {
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
+}
+
+.footer-link {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 600px;
+  margin: 10px auto 15px auto;
+}
+
+.link-home,
+.link-about,
+.link-knowledge,
+.link-portfolio,
+.link-hobbies,
+.link-contact {
+  align-self: center;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 /* Social Icons */
@@ -705,6 +724,21 @@ a:-webkit-any-link {
   .knowledge-description {
     width: auto;
   }
+
+  .footer-link {
+    flex-direction: column;
+    width: unset;
+  }
+
+  .link-home,
+  .link-about,
+  .link-knowledge,
+  .link-portfolio,
+  .link-hobbies,
+  .link-contact {
+    padding-bottom: 5px;
+  }
+
 }
 
 @media screen and (max-width: 600px) {
